mdapi_bo1/objects/Rider_History__b.object
<CustomObject>

    <fields>
        <fullName>Start_Location_Lat__c</fullName>
        <label>Start Location Latitude</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>

     <fields>
        <fullName>Start_Location_Long__c</fullName>
        <label>Start Location Longitude</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>True</required>
        <type>DateTime</type>
        <unique>False</unique>
    </fields>
    
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <required>False</required>
        <type>DateTime</type>
        <unique>False</unique>
    </fields>

    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>16</length>
        <type>Text</type>
        <unique>False</unique>
    </fields>

    <fields> 
        <fullName>Rider_Account__c</fullName>
        <label>Rider Account</label>
        <length>16</length>
        <required>True</required>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Rider_Rating__c</fullName>
        <label>Rider Rating</label>
        <required>False</required>
        <type>Number</type>
        <unique>False</unique>
        <precision>2</precision>
        <scale>1</scale>
   </fields>

    <indexes>
        <fullName>Rider_History_Index</fullName>
        <label>Rider History Index</label>
        <fields>
            <name>Rider_Account__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Start_Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
    </indexes>
    
    <label>Rider History</label>
    <pluralLabel>Rider Histories</pluralLabel>

</CustomObject>